-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.1.0
-
None
-
3
-
5046
Niu has found in LU-128 that there is race possible in target_handle_connect(). The server sets RECOVERING flag in reply but right after that the recovery is ended, so client is evicted and new connection is established. The client will start replaying over established connection and server accepts them fully.
We have two problems here:
1) The race itself to be fixed so client shouldn't get RECOVERING flag for new connection.
2) The server must deny replay requests during normal processing otherwise it is possible to break transaction flow by malformed client which will send replays without recovery.
I am going to add patches in gerrit for both problems.