LU-178 prevent replays after recovery on server

- Drop requests with wrong flags during normal processing.
- remove race in target_handle_connect which can cause replays over new export
- test case for wrong replays handling

Change-Id: Icbfc0ae549ab63a510e0d62fcac1ed661b324fb9
Signed-off-by: Mikhail Pershin <tappro@whamcloud.com>